--- a/R1/claseFile/pom.xml
+++ b/R1/claseFile/pom.xml
@@ -7,8 +7,7 @@
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>22</maven.compiler.source>
-        <maven.compiler.target>22</maven.compiler.target>
+        <maven.compiler.release>22</maven.compiler.release>
         <exec.mainClass>com.jgc.clasefile.ClaseFile</exec.mainClass>
     </properties>
 </project>
