--- a/R1/claseFile/pom.xml
+++ b/R1/claseFile/pom.xml
@@ -7,7 +7,8 @@
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.release>22</maven.compiler.release>
+        <maven.compiler.source>22</maven.compiler.source>
+        <maven.compiler.target>22</maven.compiler.target>
         <exec.mainClass>com.jgc.clasefile.ClaseFile</exec.mainClass>
     </properties>
 </project>
